--- a/WebContent/LoginStyle.css
+++ b/WebContent/LoginStyle.css
@@ -3,6 +3,34 @@
 	padding: 0;
 }
 
-.navbar-light.bg-light {
-    background-color:  #00FFFF !important; 
+body{
+	background-image: url('BG.jpg');
+	background-size: cover;
+    background-repeat: repeat;
+    
+}
+
+.navbar {
+    font-family: 'Pacifico', cursive;
+    color: white;
+    animation: neon 5s infinite;
+ 
+}
+
+@keyframes neon{
+	0%, 39%, 41%, 59%, 61%, 100%{
+		text-shadow:
+		white 0 0 12px,
+		black 0 0 24px,
+		black 0 0 36px;
+	}
+	
+	40%, 60% {
+	text-shadow: none;
+	}
+}
+
+.navbar-light.bg-light
+{
+	background-color:  #4169E1 !important;
 }
