--- a/WebContent/includes/NavBarStyle.css
+++ b/WebContent/includes/NavBarStyle.css
@@ -3,27 +3,7 @@
 	padding: 0;
 }
 
-.navbar {
-    font-family: 'Pacifico', cursive;
-    color: white;
-    animation: neon 5s infinite;
- 
-}
-
-@keyframes neon{
-	0%, 39%, 41%, 59%, 61%, 100%{
-		text-shadow:
-		white 0 0 12px,
-		black 0 0 24px,
-		black 0 0 36px;
-	}
-	
-	40%, 60% {
-	text-shadow: none;
-	}
-}
-
-.navbar-light.bg-light
+.box
 {
-	background-color:  #4169E1 !important;
+	background-color:  #4169E1;
 }
