--- a/WebContent/userSTYLE.css
+++ b/WebContent/userSTYLE.css
@@ -7,27 +7,51 @@ body{
 	background-image: url('BG.jpg');
 	background-size: cover;
     background-repeat: repeat;
-    
     font-family: 'Pacifico', cursive;
     color: white;
-    animation: neon 5s infinite;
     
-}
-
-@keyframes neon{
-	0%, 39%, 41%, 59%, 61%, 100%{
-		text-shadow:
-		white 0 0 12px,
-		black 0 0 24px,
-		black 0 0 36px;
-	}
-	
-	40%, 60% {
-	text-shadow: none;
-	}
 }
 
 .navbar-light.bg-light
 {
 	background-color:  #4169E1 !important;
+}
+
+body {
+	background-color: #f4f4f4;
+	margin: 0;
+	padding: 0;
+}
+label {
+	width: 150px;
+	display: inline-block;
+	text-align: left;
+}
+input[type="password"] {
+	width: 200px;
+}
+.container {
+	max-width: 600px;
+	margin: 50px auto;
+	background-color: #4169E1;
+	padding: 20px;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+h1 {
+	text-align: center;
+}
+.user-details {
+	margin-top: 20px;
+}
+.detail {
+	margin-bottom: 10px;
+}
+.detail label {
+	font-weight: bold;
+}
+.error-message {
+	color: red;
+	font-size: 14px;
+	margin-top: 5px;
 }
