--- a/WebContent/FileCSS/IndexSTYLE.css
+++ b/WebContent/FileCSS/IndexSTYLE.css
@@ -11,9 +11,15 @@ body{
     font-family: 'Pacifico', cursive;
     color: white;
     
-    
 }
 
+.card-container {
+            display: flex; 
+            flex-wrap: wrap; 
+            gap: 20px; 
+            justify-content: center; 
+            padding: 20px; 
+        }
 
 .navbar-light.bg-light
 {
